column_flow Layout - last column is too small #49635

Closed
opened 2016-10-12 08:16:07 +02:00 by Jasper van Nieuwenhuizen · 4 comments

System Information
OSX El Capitan (10.11.6)

Blender Version
Broken: 2.78
Worked: (optional)

Short description of error
When using the column_flow layout, the last column is too small with some unneeded empty space next to it. The more columns you add, the bigger the empty space gets.

column_flow_bug.jpg

Exact steps for others to reproduce the error
Open the attached .py file in the text editor and run it. Look in the 3D View Properties panel for 'Column Flow Bug'.
column_flow_bug.py

**System Information** OSX El Capitan (10.11.6) **Blender Version** Broken: 2.78 Worked: (optional) **Short description of error** When using the column_flow layout, the last column is too small with some unneeded empty space next to it. The more columns you add, the bigger the empty space gets. ![column_flow_bug.jpg](https://archive.blender.org/developer/F377239/column_flow_bug.jpg) **Exact steps for others to reproduce the error** Open the attached .py file in the text editor and run it. Look in the 3D View Properties panel for 'Column Flow Bug'. [column_flow_bug.py](https://archive.blender.org/developer/F377241/column_flow_bug.py)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jasperge-2

Added subscriber: @jasperge-2
Bastien Montagne self-assigned this 2016-10-12 13:14:37 +02:00

This issue was referenced by 918e6cf4c9

This issue was referenced by 918e6cf4c9b74ff96ad06753ef9e541837eb3b22

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49635
No description provided.